committing and uploading first time

--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-native": "0.76.3"
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "@types/react-dom": "^18.3.5",
+    "appwrite": "^17.0.0",
+    "link": "^2.1.1",
+    "react": "^18.3.1",
+    "react-native": "^0.76.6",
+    "react-native-config": "^1.5.3",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-photo-upload": "^1.3.0",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-safe-area-view": "^2.0.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-snackbar": "^2.8.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -23,8 +43,9 @@
     "@react-native/babel-preset": "0.76.3",
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
-    "@react-native/typescript-config": "0.76.3",
-    "@types/react": "^18.2.6",
+    "@react-native/typescript-config": "^0.76.6",
+    "@types/react": "^18.3.18",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
