--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+.env
 
 # node.js
 #
@@ -65,6 +66,7 @@ yarn-error.log
 # testing
 /coverage
 
+/
 # Yarn
 .yarn/*
 !.yarn/patches
